--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/app.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/app.config
@@ -1,20 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString"
-            connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=O2S_QLHV;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString1"
-            connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=O2S_QLHV;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
-
-        <add name="O2S_QuanLyHocVien.DataAccess.Properties.Settings.O2S_QLHVConnectionString"
-            connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=O2S_QLHV;Persist Security Info=True;User ID=sa;Password=123456"
-            providerName="System.Data.SqlClient" />
-        <add name="O2S_QuanLyHocVien.DataAccess.Properties.Settings.O2S_QLHVConnectionString1"
-            connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=O2S_QLHV;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString"
+        connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=O2S_QLHV;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <appSettings configSource="AppSettings.config">
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+</configuration>
