--- a/0_QuanLyHocVien/O2S_QuanLyHocVien/AppSettings.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien/AppSettings.config
@@ -1,4 +1,4 @@
-﻿<appSettings>
+<appSettings>
   <add key="skin" value="" />
   <add key="ServerHost" value="E8bW11A82yeCdcUQD76COZnpypHUVcgl" />
   <add key="Username" value="SfsMjcenJ68=" />
