--- a/0_QuanLyHocVien/O2S_QuanLyHocVienLauncher/AppSettings.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVienLauncher/AppSettings.config
@@ -1,9 +1,9 @@
-﻿<appSettings>
+<appSettings>
   <add key="skin" value="" />
-  <add key="ServerHost" value="ynGG1EfwNU21pgD1KUcFHYJQRfyKeSqt" />
+  <add key="ServerHost" value="E8bW11A82yeCdcUQD76COZnpypHUVcgl" />
   <add key="Username" value="SfsMjcenJ68=" />
   <add key="Password" value="Wfcy3r2UVFE=" />
-  <add key="Database" value="Cjugjxvn1vHb4ZiEsLsVYu+YTUTXeGC5" />
+  <add key="Database" value="VKuqGoXpl4CZ6cqR1FXIJQ==" />
   <add key="checkEditNhoPass" value="True" />
   <add key="LoginUser" value="KgyxW9jqNcc=" />
   <add key="LoginPassword" value="E36w19IK+gaPIT7K1d/6sw==" />
