--- a/0_QuanLyHocVien/O2S_QuanLyHocVienLauncher/O2S_QuanLyHocVienLauncher.csproj
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVienLauncher/O2S_QuanLyHocVienLauncher.csproj
@@ -62,7 +62,7 @@
     </Reference>
     <Reference Include="O2S_License, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\1_Library\O2S_License.dll</HintPath>
+      <HintPath>..\..\..\..\1_Library\Lib_Debug\O2S_License.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
