--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.BusinessLogic/O2S_QuanLyHocVien.BusinessLogic.csproj
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.BusinessLogic/O2S_QuanLyHocVien.BusinessLogic.csproj
@@ -82,6 +82,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filter\BangDiemFilter.cs" />
+    <Compile Include="Filter\PhongHocFilter.cs" />
     <Compile Include="Filter\CaHocFilter.cs" />
     <Compile Include="Filter\HoaDonThuChiFilter.cs" />
     <Compile Include="Filter\PhieuGhiDanhFilter.cs" />
@@ -90,6 +92,7 @@
     <Compile Include="Filter\XepLichHocFilter.cs" />
     <Compile Include="KeySetting.cs" />
     <Compile Include="Logic\BangDiemLogic.cs" />
+    <Compile Include="Logic\PhongHocLogic.cs" />
     <Compile Include="Logic\HocPhiHocVienLogic.cs" />
     <Compile Include="Logic\ChucNangLogic.cs" />
     <Compile Include="Logic\CaHocLogic.cs" />
